RESOLVED FIXED254957
REGRESSION(259904@main): Comment editor on huffpost.com doesn't update the caret position after inserting new line
https://bugs.webkit.org/show_bug.cgi?id=254957
Summary REGRESSION(259904@main): Comment editor on huffpost.com doesn't update the ca...
Ryosuke Niwa
Reported 2023-04-03 17:12:34 PDT
After 259904@main, comment editor on huffpost.com doesn't update the caret position after inserting a new line.
Attachments
Ryosuke Niwa
Comment 1 2023-04-03 18:09:17 PDT
Ryosuke Niwa
Comment 2 2023-04-03 18:25:04 PDT
EWS
Comment 3 2023-04-04 01:23:44 PDT
Committed 262573@main (c48d7192b129): <https://commits.webkit.org/262573@main> Reviewed commits have been landed. Closing PR #12352 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.