Cherry-pick 262573@main (c48d7192b129). https://bugs.webkit.org/show_bug.cgi?id=254957

REGRESSION(259904@main): Comment editor on huffpost.com doesn't update the caret position after inserting new line
    https://bugs.webkit.org/show_bug.cgi?id=254957
    <rdar://106426103>

    Reviewed by Wenson Hsieh.

    The bug was caused by DOMSelection::collapse exiting early due to the node being inside a shadow tree.
    When live range selection is enabled, we exit early if frame->document()->contains(*node) isn’t true.
    Fixed the bug by relaxing this restriction to allow a connected node of the same document.

    This patch also relaxes the same restriction on DOMSelection::extend.

    * LayoutTests/fast/shadow-dom/selection-collapse-expected.txt: Added.
    * LayoutTests/fast/shadow-dom/selection-collapse.html: Added.
    * Source/WebCore/page/DOMSelection.cpp:
    (WebCore::DOMSelection::collapse): Fixed the bug by relaxing the condition for an early exit when
    selectionAPIForShadowDOMEnabled returns true. Also made the check slightly more efficient by avoiding
    the tree walk to find the root node in most cases.
    (WebCore::DOMSelection::extend): Ditto.

    Canonical link: https://commits.webkit.org/262573@main